--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -72,14 +72,14 @@ jobs:
       - name: ci/lint
         working-directory: webapp/channels
         run: |
-          cp i18n/en.json /tmp/en.json
+          cp src/i18n/en.json /tmp/en.json
           mkdir -p /tmp/fake-mobile-dir/assets/base/i18n/
           echo '{}' > /tmp/fake-mobile-dir/assets/base/i18n/en.json
-          npm run mmjstool -- i18n extract-webapp --webapp-dir . --mobile-dir /tmp/fake-mobile-dir
-          diff /tmp/en.json i18n/en.json
+          npm run mmjstool -- i18n extract-webapp --webapp-dir ./src --mobile-dir /tmp/fake-mobile-dir
+          diff /tmp/en.json src/i18n/en.json
           # Address weblate behavior which does not remove whole translation item when translation string is set to empty
-          npm run mmjstool -- i18n clean-empty --webapp-dir . --mobile-dir /tmp/fake-mobile-dir --check
-          npm run mmjstool -- i18n check-empty-src --webapp-dir . --mobile-dir /tmp/fake-mobile-dir
+          npm run mmjstool -- i18n clean-empty --webapp-dir ./src --mobile-dir /tmp/fake-mobile-dir --check
+          npm run mmjstool -- i18n check-empty-src --webapp-dir ./src --mobile-dir /tmp/fake-mobile-dir
           rm -rf tmp
   check-type:
     runs-on: ubuntu-22.04
