--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -199,84 +199,6 @@ jobs:
           name: webapp-artifact
           path: webapp/channels/mattermost-webapp.tar.gz
           retention-days: 14
-  prepare-docker-build:
-    runs-on: ubuntu-22.04
-    needs: build
-    # Run this Job, on every branch except "master","cloud-*","release-*" branches
-    if: |
-      ${{ !(github.ref_name == 'master' ||
-           github.ref_name == 'cloud' ||
-           startsWith(github.ref_name,'release-'))
-      }}
-    env:
-      REPO_NAME: ${{ github.event.repository.name }}
-    steps:
-    - name: ci/checkout-repo
-      uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
-    # We need to sanitize the branch name before using it
-    - name: ci/sanitize-branch-name
-      id: branch
-      uses: transferwise/sanitize-branch-name@b10b4d524ac5a7b645b43a3527db3a6cca017b9d # v1
-    # Search for the string "pull" and replace it with "PR" in branch-name
-    - name: ci/sanitize-branch-name-replace-pull-with-PR-
-      run: echo "BRANCH_NAME=$(echo ${{ steps.branch.outputs.sanitized-branch-name }} | sed 's/^pull\//PR-/g')" >> $GITHUB_ENV
-    - name: ci/artifacts-downloads
-      uses: actions/download-artifact@e9ef242655d12993efdcda9058dee2db83a2cb9b  # v3.0.2
-      with:
-        name: webapp-artifact
-    - name: ci/Download-server-bundle
-      run: |
-        curl -f -o server.tar.gz https://pr-builds.mattermost.com/mattermost-server/$BRANCH_NAME/mattermost-enterprise-linux-amd64.tar.gz || true
-        if [[ -f server.tar.gz ]]; then
-            echo "Downloaded server bundle for $BRANCH_NAME branch from pr-builds.mattermost.com"
-        else
-            curl -f -o server.tar.gz https://s3.amazonaws.com/releases.mattermost.com/gitlab/bundle/master/mattermost-enterprise-linux-amd64.tar.gz
-            echo "Downloaded server bundle for master from releases.mattermost.com"
-        fi
-        tar xf server.tar.gz
-    - name: ci/Replace-web-app
-      run: |
-        mv mattermost/client client-original
-        tar xf mattermost-webapp.tar.gz
-        mv client mattermost/client
-    - name: ci/Re-add-products
-      run: |
-        mv client-original/products mattermost/client/products
-    - name: ci/Repackage server bundle
-      run: |
-        tar -zcf mattermost-enterprise-linux-amd64.tar.gz mattermost/
-    - name: ci/persist-artifact
-      uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
-      with:
-        name: mattermost-enterprise-linux-artifact
-        path: mattermost-enterprise-linux-amd64.tar.gz
-        retention-days: 14
-  build-docker:
-    runs-on: ubuntu-22.04
-    needs: prepare-docker-build
-    steps:
-    - name: cd/configure-env-variables
-      id: vars
-      # Extract short-sha as TAG, and repository name as REPO_NAME
-      run: |
-        echo "TAG=`echo ${{ github.event.pull_request.head.sha || github.sha }} | cut -c1-7`" >> $GITHUB_ENV
-        echo "REPO_NAME=${{github.event.repository.name}}" >> $GITHUB_ENV
-    - name: cd/Login to Docker Hub
-      uses: docker/login-action@3da7dc6e2b31f99ef2cb9fb4c50fb0971e0d0139 # v2.1.0
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: cd/Setup Docker Buildx
-      uses: docker/setup-buildx-action@11e8a2e2910826a92412015c515187a2d6750279 # v2.4
-    - name: cd/docker-build-push
-      env:
-        DOCKER_CLI_EXPERIMENTAL: enabled
-      run: |
-        wget https://raw.githubusercontent.com/mattermost/mattermost-server/master/build/Dockerfile
-        wget https://raw.githubusercontent.com/mattermost/mattermost-server/master/build/entrypoint.sh
-        chmod +x entrypoint.sh
-        export MM_PACKAGE=https://pr-builds.mattermost.com/$REPO_NAME/commit/${{ github.event.pull_request.head.sha || github.sha }}/mattermost-enterprise-linux-amd64.tar.gz
-        docker buildx build --push --build-arg MM_PACKAGE=$MM_PACKAGE -t mattermost/mm-ee-test:${TAG} --provenance=false .
   # run-performance-bechmarks:
   #   uses: ./.github/workflows/performance-benchmarks.yml
-  #   needs: prepare-docker-build
+  #   needs: build
