--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,20 +184,17 @@ jobs:
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
           name: server-dist-artifact
-          path: dist/
+          path: server/dist/
           retention-days: 14
       - name: Persist build artifacts
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
           name: server-build-artifact
-          path: build/
+          path: server/build/
           retention-days: 14 
   upload-s3:
     name: Upload to S3 bucket
     runs-on: ubuntu-22.04
-    defaults:
-      run:
-        working-directory: server
     needs: 
       - build-mattermost-server
       - test-mysql
@@ -210,7 +207,7 @@ jobs:
       uses: actions/download-artifact@e9ef242655d12993efdcda9058dee2db83a2cb9b  # v3.0.2
       with:
         name: server-dist-artifact
-        path: dist/
+        path: server/dist/
     - name: Configure AWS
       uses: aws-actions/configure-aws-credentials@07c2f971bac433df982ccc261983ae443861db49 # v1-node16
       with:
@@ -226,8 +223,8 @@ jobs:
       run: echo "BRANCH_NAME=$(echo ${{ steps.branch.outputs.sanitized-branch-name }} | sed 's/^pull\//PR-/g')" >> $GITHUB_ENV
     - name: ci/artifact-upload
       run: |
-        aws s3 cp dist/ s3://pr-builds.mattermost.com/$REPO_NAME/$BRANCH_NAME/ --acl public-read --cache-control "no-cache" --recursive
-        aws s3 cp dist/ s3://pr-builds.mattermost.com/$REPO_NAME/commit/${{ github.sha }}/ --acl public-read --cache-control "no-cache" --recursive
+        aws s3 cp server/dist/ s3://pr-builds.mattermost.com/$REPO_NAME/$BRANCH_NAME/ --acl public-read --cache-control "no-cache" --recursive
+        aws s3 cp server/dist/ s3://pr-builds.mattermost.com/$REPO_NAME/commit/${{ github.sha }}/ --acl public-read --cache-control "no-cache" --recursive
   build-docker:
     name: Build docker image
     runs-on: ubuntu-22.04
