add e2e ci workflow, clean up dep and update playwright readme

--- a/e2e/cypress/package.json
+++ b/e2e/cypress/package.json
@@ -41,14 +41,12 @@
     "dotenv": "16.0.3",
     "eslint": "7.32.0",
     "eslint-import-resolver-webpack": "0.13.2",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-formatjs": "4.9.0",
+    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-mattermost": "github:mattermost/eslint-plugin-mattermost#5b0c972eacf19286e4c66221b39113bf8728a99e",
     "eslint-plugin-no-only-tests": "3.1.0",
     "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
     "express": "4.18.2",
     "extract-zip": "2.0.1",
     "knex": "2.4.0",
@@ -81,6 +79,7 @@
   "scripts": {
     "postinstall": "patch-package",
     "check-types": "tsc -b",
+    "cypress:open": "cross-env TZ=Etc/UTC cypress open",
     "cypress:run": "cross-env TZ=Etc/UTC cypress run",
     "cypress:run:chrome": "cross-env TZ=Etc/UTC cypress run --browser chrome",
     "cypress:run:firefox": "cross-env TZ=Etc/UTC cypress run --browser firefox",
