--- a/webapp/platform/client/package.json
+++ b/webapp/platform/client/package.json
@@ -10,7 +10,8 @@
   "files": [
     "lib"
   ],
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "github:mattermost/mattermost-webapp",
