Make web app type check without using paths for platform packages

--- a/webapp/platform/components/package.json
+++ b/webapp/platform/components/package.json
@@ -2,7 +2,7 @@
   "name": "@mattermost/components",
   "version": "7.4.0",
   "module": "dist/index.esm.js",
-  "types": "dist/index.esm.d.ts",
+  "types": "dist/index.d.ts",
   "styles": "dist/index.esm.css",
   "scripts": {
     "build": "rollup -c",
