--- a/webapp/channels/tsconfig.json
+++ b/webapp/channels/tsconfig.json
@@ -23,29 +23,22 @@
     "baseUrl": "./src",
     "useUnknownInCatchVariables": false,
     "paths": {
-        "@mattermost/client": ["../../platform/client/src"],
-        "@mattermost/components": ["../../platform/components/src"],
-        "@mattermost/types/*": ["../../platform/types/src/*"],
         "mattermost-redux/*": ["packages/mattermost-redux/src/*"],
         "reselect": ["packages/reselect/src"],
         "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"],
         "!!file-loader*": ["utils/empty-string"],
         "@e2e-support/*": ["e2e/playwright/support/*"],
         "@e2e-test.config": ["e2e/playwright/test.config.ts"]
-    }
+    },
+    "composite": true
   },
   "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "dist",
-    "e2e/cypress",
-    "e2e/playwright",
-    "!node_modules/@types",
-    "coverage"
+    "./src/**/*",
+    "./src/**/*.json"
   ],
   "references": [
     {"path": "../platform/client"},
+    {"path": "../platform/components"},
     {"path": "../platform/types"}
   ]
 }
