--- a/.github/workflows/esrupgrade-common.yml
+++ b/.github/workflows/esrupgrade-common.yml
@@ -61,8 +61,8 @@ jobs:
             -w /mattermost-server/mattermost-server \
             $BUILD_IMAGE &
           # In parallel, wait for the migrations to finish.
-          # To verify this, we check whether the db_migrations table contains the latest migration in this version
-          until [ `docker logs mmserver | grep "Server is listening on"` -eq 1 ]; do\
+          # To verify this, we check that the server has finished the startup job through the log line "Server is listening on"
+          until docker logs mmserver | grep "Server is listening on"; do\
             echo "Waiting for migrations to finish..."; \
             sleep 1; \
             done;
@@ -95,6 +95,7 @@ jobs:
           path: ${{ env.DUMP_SERVER_NAME }}.gz
   esr-upgrade-script:
     runs-on: ubuntu-latest-8-cores
+    timeout-minutes: 30
     steps:
       - name: Checkout mattermost-server
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
