--- a/.github/workflows/esrupgrade-common.yml
+++ b/.github/workflows/esrupgrade-common.yml
@@ -69,24 +69,23 @@ jobs:
           # Make sure to stop the server. Also, redirect output to null;
           # otherwise, the name of the container gets written to the console, which is weird
           docker stop mmserver > /dev/null
-      # - name: Cleanup DB
-      #   run : |
-      #     cd scripts/esrupgrades
-      #     docker exec -i ghactions_mysql_1 mysql -AN $MYSQL_CONN_ARGS < ${{ inputs.cleanup-script-path }}
+      - name: Cleanup DB
+        run : |
+          cd scripts/esrupgrades
+          docker exec -i ghactions_mysql_1 mysql -AN $MYSQL_CONN_ARGS < ${{ inputs.cleanup-script-path }}
       - name: Dump upgraded database
         run: |
           # Ignore tables containing meta-information about the migrations (db_{lock,migrations}),
           # since those will not be present in the upgrade from the script.
           # Use --skip-opt to have each INSERT into one line.
           # Use --set-gtid-purged=OFF to suppress GTID-related statements.
-          # docker exec -i ghactions_mysql_1 mysqldump \
-          #   --skip-opt --set-gtid-purged=OFF \
-          #   $MYSQL_CONN_ARGS > $DUMP_SERVER_NAME
-          docker exec -i ghactions_mysql_1 mysqldump --set-gtid-purged=OFF $MYSQL_CONN_ARGS | gzip > ${DUMP_SERVER_NAME}.gz
-      # - name: Cleanup dump and compress
-      #   run: |
-      #     # We skip the very last line, which simply contains the date of the dump
-      #     # head -n -1 ${DUMP_SERVER_NAME} | gzip > ${DUMP_SERVER_NAME}.gz
+          docker exec -i ghactions_mysql_1 mysqldump \
+            --skip-opt --set-gtid-purged=OFF \
+            $MYSQL_CONN_ARGS > $DUMP_SERVER_NAME
+      - name: Cleanup dump and compress
+        run: |
+          # We skip the very last line, which simply contains the date of the dump
+          head -n -1 ${DUMP_SERVER_NAME} | gzip > ${DUMP_SERVER_NAME}.gz
       - name: Upload dump
         uses: actions/upload-artifact@v3
         with:
