--- a/.github/workflows/esrupgrade.yml
+++ b/.github/workflows/esrupgrade.yml
@@ -19,11 +19,19 @@ jobs:
   #     final-version: 7.8
   #     migration-script-path: esr.5.37-7.8.mysql.up.sql
   #     cleanup-script-path: esr.5.37-7.8.mysql.cleanup.sql
-  esr-upgrade-5_37-6_3:
-    name: Run ESR upgrade script from 5.37 to 6.3
+  # esr-upgrade-5_37-6_3:
+  #   name: Run ESR upgrade script from 5.37 to 6.3
+  #   uses: ./.github/workflows/esrupgrade-common.yml
+  #   with:
+  #     db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_537_mysql_collationfixed.sql.gz
+  #     final-version: 6.3
+  #     migration-script-path: esr.5.37-6.3.mysql.up.sql
+  #     cleanup-script-path: esr.5.37-6.3.mysql.cleanup.sql
+  esr-upgrade-6_3-7_8:
+    name: Run ESR upgrade script from 6.3 to 7.8
     uses: ./.github/workflows/esrupgrade-common.yml
     with:
-      db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_537_mysql_collationfixed.sql.gz
-      final-version: 6.3
-      migration-script-path: esr.5.37-6.3.mysql.up.sql
-      cleanup-script-path: esr.5.37-6.3.mysql.cleanup.sql
+      db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_63_mysql.sql.gz
+      final-version: 7.8
+      migration-script-path: esr.6.3-7.8.mysql.up.sql
+      cleanup-script-path: esr.6.3-7.8.mysql.cleanup.sql
