--- a/.github/workflows/esrupgrade.yml
+++ b/.github/workflows/esrupgrade.yml
@@ -9,6 +9,7 @@ on:
       - master
       - cloud
       - release-*
+      - squash.5.37-7.8.script
 jobs:
   esr-upgrade-5_37-7_8:
     name: Run ESR upgrade script from 5.37 to 7.8
@@ -17,17 +18,17 @@ jobs:
       db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_537_mysql_collationfixed.sql.gz
       initial-version: 5.37
       final-version: 7.8
-  esr-upgrade-5_37-6_3:
-    name: Run ESR upgrade script from 5.37 to 6.3
-    uses: ./.github/workflows/esrupgrade-common.yml
-    with:
-      db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_537_mysql_collationfixed.sql.gz
-      initial-version: 5.37
-      final-version: 6.3
-  esr-upgrade-6_3-7_8:
-    name: Run ESR upgrade script from 6.3 to 7.8
-    uses: ./.github/workflows/esrupgrade-common.yml
-    with:
-      db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_63_mysql.sql.gz
-      initial-version: 6.3
-      final-version: 7.8
+  # esr-upgrade-5_37-6_3:
+  #   name: Run ESR upgrade script from 5.37 to 6.3
+  #   uses: ./.github/workflows/esrupgrade-common.yml
+  #   with:
+  #     db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_537_mysql_collationfixed.sql.gz
+  #     initial-version: 5.37
+  #     final-version: 6.3
+  # esr-upgrade-6_3-7_8:
+  #   name: Run ESR upgrade script from 6.3 to 7.8
+  #   uses: ./.github/workflows/esrupgrade-common.yml
+  #   with:
+  #     db-dump-url: https://lt-public-data.s3.amazonaws.com/47K_63_mysql.sql.gz
+  #     initial-version: 6.3
+  #     final-version: 7.8
