Run linters for all web app packages as part of Web App CI linting

--- a/webapp/platform/client/package.json
+++ b/webapp/platform/client/package.json
@@ -38,6 +38,6 @@
     "build": "tsc --build --verbose",
     "run": "tsc --watch --preserveWatchOutput",
     "test": "jest",
-    "clean": "rm -rf tsconfig.tsbuildinfo ./lib"
+    "clean": "rm -rf lib node_modules tsconfig.tsbuildinfo"
   }
 }
