--- a/webapp/boards/package.json
+++ b/webapp/boards/package.json
@@ -17,8 +17,8 @@
 		"check-style:fix:prettier": "prettier --write './src/**/*.scss'",
 		"check-types": "tsc",
 		"check-types:fix": "npm run check-types -- --noEmit --fix",
-		"check": "npm run check-lint && npm run check-style && npm run check-types",
-		"fix": "npm run check-lint:fix && npm run check-style:fix && npm run check-types:fix",
+		"check": "npm run check-lint && npm run check-style",
+		"fix": "npm run check-lint:fix && npm run check-style:fix",
 		"test": "jest --forceExit --detectOpenHandles --verbose",
 		"test:watch": "jest --watch",
 		"test:updatesnapshot": "jest --updateSnapshot",
