--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -81,7 +81,7 @@ jobs:
           npm run mmjstool -- i18n clean-empty --webapp-dir ./src --mobile-dir /tmp/fake-mobile-dir --check
           npm run mmjstool -- i18n check-empty-src --webapp-dir ./src --mobile-dir /tmp/fake-mobile-dir
           rm -rf tmp
-  check-type:
+  check-types:
     runs-on: ubuntu-22.04
     defaults:
       run:
@@ -110,7 +110,6 @@ jobs:
           make node_modules
           # make channels/e2e/playwright/node_modules
       - name: ci/lint
-        working-directory: webapp/channels
         run: |
           npm run check-types
   tests:
