--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -113,7 +113,7 @@ jobs:
         working-directory: webapp/channels
         run: |
           npm run check-types
-  tests:
+  test:
     runs-on: ubuntu-22.04
     needs: [check-type, check-i18n, check-lint]
     permissions:
@@ -149,9 +149,8 @@ jobs:
         id: cpu-cores
         uses: SimenB/github-actions-cpu-cores@c508d404ab007faae80a014072fd8c0e17792118 # v1.1.0
       - name: ci/test
-        working-directory: webapp/channels
         run: |
-          npm run test-ci -- --maxWorkers=${{ steps.cpu-cores.outputs.count }}
+          npm run test -- --ci --maxWorkers=${{ steps.cpu-cores.outputs.count }}
       - name: ci/publish-test-results
         uses: EnricoMi/publish-unit-test-result-action@a3caf02865c0604ad3dc1ecfcc5cdec9c41b7936  # v2.3.0
         if: always()
