--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -150,7 +150,10 @@ jobs:
         uses: SimenB/github-actions-cpu-cores@c508d404ab007faae80a014072fd8c0e17792118 # v1.1.0
       - name: ci/test
         run: |
-          npm run test -- --ci --maxWorkers=${{ steps.cpu-cores.outputs.count }}
+          # npm run test --workspace=boards -- --ci --maxWorkers=${{ steps.cpu-cores.outputs.count }}
+          npm run test --workspace=channels -- --ci --maxWorkers=${{ steps.cpu-cores.outputs.count }}
+          npm run test --workspace=client -- --ci --maxWorkers=${{ steps.cpu-cores.outputs.count }}
+          npm run test --workspace=playbooks -- --ci --maxWorkers=${{ steps.cpu-cores.outputs.count }}
       - name: ci/publish-test-results
         uses: EnricoMi/publish-unit-test-result-action@a3caf02865c0604ad3dc1ecfcc5cdec9c41b7936  # v2.3.0
         if: always()
