--- a/webapp/platform/client/package.json
+++ b/webapp/platform/client/package.json
@@ -38,6 +38,7 @@
     "build": "tsc --build --verbose",
     "run": "tsc --watch --preserveWatchOutput",
     "test": "jest",
+    "test-ci": "jest --ci --forceExit --detectOpenHandles --maxWorkers=100%",
     "clean": "rm -rf tsconfig.tsbuildinfo ./lib"
   }
 }
