Fix path to client package tests

--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -151,7 +151,7 @@ jobs:
         run: |
           # npm run test-ci --workspace=boards
           npm run test-ci --workspace=channels
-          npm run test-ci --workspace=client
+          npm run test-ci --workspace=platform/client
           npm run test-ci --workspace=playbooks
       - name: ci/publish-test-results
         uses: EnricoMi/publish-unit-test-result-action@a3caf02865c0604ad3dc1ecfcc5cdec9c41b7936  # v2.3.0
