--- a/.github/workflows/esrupgrade.yml
+++ b/.github/workflows/esrupgrade.yml
@@ -10,6 +10,7 @@ on:
       - cloud
       - release-*
       - squash.5.37-7.8.script
+      - squash.fixup.test
 jobs:
   esr-upgrade-5_37-7_8:
     name: Run ESR upgrade script from 5.37 to 7.8
