--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "clean": "npm run clean --workspaces --if-present"
   },
   "devDependencies": {
+    "@types/crypto-js": "4.1.1",
     "blessed": "0.1.81",
     "chalk": "4.1.2",
     "concurrently": "7.6.0",
@@ -25,5 +26,8 @@
     "platform/types",
     "playbooks",
     "boards"
-  ]
+  ],
+  "dependencies": {
+    "crypto-js": "4.1.1"
+  }
 }
