playwright: restructure page and components model

--- a/e2e/playwright/tsconfig.json
+++ b/e2e/playwright/tsconfig.json
@@ -13,5 +13,6 @@
             "@e2e-test.config": ["test.config.ts"]
         }
     },
-    "include": ["./**/*"]
+    "include": ["./**/*"],
+    "exclude": ["playwright-report"]
 }
