--- a/e2e/playwright/package.json
+++ b/e2e/playwright/package.json
@@ -14,6 +14,7 @@
         "@percy/cli": "1.18.0",
         "@percy/playwright": "1.0.4",
         "@playwright/test": "1.30.0",
+        "async-wait-until": "2.0.12",
         "chalk": "4.1.2",
         "deepmerge": "4.3.0",
         "dotenv": "16.0.3",
