--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 
 include:
   - project: mattermost/ci/mattermost-server
-    ref: monorepo-testing
+    ref: master-mono-repo
     file: private.yml
 
 variables:
