--- a/webapp/boards/package.json
+++ b/webapp/boards/package.json
@@ -15,7 +15,7 @@
 		"check-style": "stylelint **/*.scss",
 		"check-style:fix": "npm run check-style -- --fix",
 		"check-style:fix:prettier": "prettier --write './src/**/*.scss'",
-		"check-types": "tsc",
+		"check-types": "tsc -b",
 		"check-types:fix": "npm run check-types -- --noEmit --fix",
 		"check": "npm run check-lint && npm run check-style",
 		"fix": "npm run check-lint:fix && npm run check-style:fix",
