--- a/webapp/platform/client/package.json
+++ b/webapp/platform/client/package.json
@@ -39,6 +39,7 @@
     "build": "tsc --build --verbose",
     "run": "tsc --watch --preserveWatchOutput",
     "test": "jest",
+    "test-ci": "jest --ci --forceExit --detectOpenHandles --maxWorkers=100%",
     "clean": "rm -rf lib node_modules tsconfig.tsbuildinfo"
   }
 }
