MM-51683 Re-add CODEOWNERS for Web Platform files

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,9 @@
 /plugin/ @mattermost/toolkit
+
+/.github/workflows/channels-ci.yml @mattermost/web-platform
+/webapp/package.json @mattermost/web-platform
+/webapp/channels/package.json @mattermost/web-platform
+/webapp/Makefile @mattermost/web-platform
+/webapp/package-lock.json @mattermost/web-platform
+/webapp/platform/*/package.json @mattermost/web-platform
+/webapp/scripts @mattermost/web-platform
