run boards webapp tests in ci

--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -147,7 +147,7 @@ jobs:
         env:
           NODE_OPTIONS: --max_old_space_size=5120
         run: |
-          # npm run test-ci --workspace=boards
+          npm run test-ci --workspace=boards
           npm run test-ci --workspace=channels
           npm run test-ci --workspace=platform/client
           npm run test-ci --workspace=playbooks
