--- a/.github/workflows/e2e-tests-ci.yml
+++ b/.github/workflows/e2e-tests-ci.yml
@@ -7,7 +7,7 @@ on:
       - mono-repo*
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'mattermost-e2e-tests-refs/heads/master' }}
+  cancel-in-progress: ${{ github.ref != '${{ github.workflow }}-refs/heads/master' }}
 defaults:
   run:
     shell: bash
